# df-data-recon

./: .dockerignore  .env.aws_ec2_container  .env.aws_ec2_native  .env.aws_ecs_container  .env.on_prem_vm_native  .gitignore  .pylintrc  Dockerfile  Dockerfile copy  Makefile  README.md  app_config.dev.yaml  app_env.aws_ec2_container.dev.env  app_env.aws_ec2_native.dev.env  app_env.on_prem_vm_native.dev.env  aws_ec2_container.env  aws_ec2_native.env  aws_ecs_container.env  pyproject.toml  requirements.txt  setup.py
cfg/: api_log.ini  config_dev.yaml
dr_app/: __init__.py  __main__.py  dr_app_api.py  dr_app_cli.py  dr_app_core.py  settings.py
dr_app/cfg/: api_log.ini  config_dev.yaml
dr_app/data/: acct_positions_20241226.recon
dr_app/recon/: validater.py
scripts/: dr_app
src/dr_app/: dr_app_api.py  dr_app_cli.py  dr_app_core.py
src/dr_app/recon/: validater.py
