[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dr_app"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Data reconciliation app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
  "pandas >= 2.1.4",
  "python-dotenv", 
]
keywords = ["data", "recon", "etl", "elt", "framework", "governance"]

[project.optional-dependencies]
my-packages-local = [
  # my packages (installed locally)
  "utils[spark]",
  "utils[aws]",
  "metadata",
  "app_calendar",
  "config",
]
my-packages-container = [
  # my packages (source in container)
  "utils[spark] @ file:///packages/utils",
  "utils[aws] @ file:///packages/utils",
  "metadata @ file:///packages/df-metadata",
  "app_calendar @ file:///packages/df-app-calendar",
  "config @ file:///packages/df-config",
]
api = [
  "fastapi" , 
  "uvicorn[standard]", 
  ]
cli = [
  "click",
]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
  "isort",
]
all-dev = [
  "dr_app[my-packages-local, cli, api, test]"
  ]
all = [
  "dr_app[my-packages-container, cli, api]"
  ]

[project.scripts]
dr-app-cli = "dr_app.dr_app_cli:main"
dr-app-api = "dr_app.dr_app_api:main"

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-data-recon.git"
Issues = "https://github.com/dexplorer/df-data-recon/issues"
Changelog = "https://github.com/dexplorer/df-data-recon/blob/master/CHANGELOG.md"

[tool.black]
#line-length = 79

[tool.isort]
profile = "black"
#line_length = 79
known_third_party = ["pyspark"]  
known_first_party = ["utils", "metadata", "app_calendar", "config", "dr_app"]  
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
src_paths = ["src", "dr_app"]  
